# PoliticalIdeologyGenZGermany

./: .gitignore  README.md  debug.py  debug2.py  eda.ipynb  plot.py  pyproject.toml
