[tool.poetry]
name = "17-allbus-ideaology"
version = "0.1.0"
description = ""
authors = ["Bastian.hundt <bastian.hundt@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
pyreadstat = "^1.2.6"
numpy = "^1.26.3"
pandas = "^2.2.0"
statsmodels = "^0.14.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
